maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:6: error: type mismatch;
 found   : Any
 required: (Int, Int)
  marquerSol(sortie, 0);
             ^ShortestPathMaze:22: error: (Int, Int) does not take parameters
  val x = casee(0);
               ^ShortestPathMaze:23: error: (Int, Int) does not take parameters
  var y = casee(1);
               ^